Added graphs, updated expalantion and explanation formats

--- a/explanations-math.html
+++ b/explanations-math.html
@@ -210,12 +210,12 @@
                                 <li>These problems are pretty tricky, don't feel discouraged about them- there's other
                                     problems on the test you can get right to make up for it. </li>
                                 <li>Identify which variable is changing and which variable(s) are held constant.</li>
-                                <li>Rewrite the formula to see the changing variable’s effect (factor or separate
-                                    terms when possible).</li>
-                                <li>Test with two easy values (one smaller, one larger) while holding the constant
+                                <li>Pick a constant value, and write that in for the constant variable- now you have a
+                                    2d graphing problem instead of 3d.</li>
+                                <li>Test the changing variable with two easy values (one smaller, one larger) while
+                                    holding the constant
                                     fixed; compare the outputs.</li>
-                                <li>Note whether the relationship is direct (output goes up when input goes up),
-                                    inverse, or levels off.</li>
+
                             </ul>
                             <h5>Worked example</h5>
                             <p class="mb-2 text-center"><strong>Given:</strong> With \(q\) held constant, how does \(r\)
